force-app/main/default/objects/Course_Enrollment__c/fields/Applied_by__c.field-meta.xml
<CustomField>
    <fullName>Applied_by__c</fullName>
    <formula>Contact__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied by</label>
    <type>Text</type>
</CustomField>