force-app/main/default/objects/Course_Enrollment__c/fields/contact_Under_CE__c.field-meta.xml
<CustomField>
    <fullName>contact_Under_CE__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Contact Enrolled under Course Master</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>