force-app/main/default/objects/Course_Enrollment__c/fields/Count_of_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Ratings__c</fullName>
    <label>Count of Ratings</label>
    <summaryForeignKey>Student_Feedback__c.Student_Course_Enrollment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>