force-app/main/default/objects/Course_Enrollment__c/fields/Course_Master__c.field-meta.xml
<CustomField>
    <fullName>Course_Master__c</fullName>
    <label>Course Master</label>
    <referenceTo>Course_Master__c</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>Course_Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>