force-app/main/default/objects/Course_Enrollment__c/fields/Course_Master_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Master_Name__c</fullName>
    <formula>Course_Master__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Master Name</label>
    <type>Text</type>
</CustomField>