force-app/main/default/objects/Course_Enrollment__c/fields/Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Enrolled__c</fullName>
    <formula>IF(Applied_by__c = &apos;Mentor&apos;,true,If(Course_Master__r.Paid_Course__c = false,true,If( ISPICKVAL(Payment_Order__r.Status__c, &apos;SUCCESS&apos;),true,false)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrolled</label>
    <type>Checkbox</type>
</CustomField>