force-app/main/default/objects/Course_Enrollment__c/fields/Enrolled_Person_s_Contact__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Person_s_Contact__c</fullName>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrolled Person&apos;s Contact</label>
    <type>Text</type>
</CustomField>