force-app/main/default/objects/Course_Enrollment__c/fields/Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>