force-app/main/default/objects/Course_Enrollment__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <formula>Course_Master__r.Thumbnail_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image URL of Course Master</label>
    <type>Text</type>
</CustomField>