force-app/main/default/objects/Course_Enrollment__c/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Mentor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mentees</relationshipLabel>
    <relationshipName>Mentees</relationshipName>
    <type>Lookup</type>
</CustomField>