force-app/main/default/objects/Course_Enrollment__c/fields/Mentor_Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Course_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor Course Enrollment</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>Course_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>