force-app/main/default/objects/Course_Enrollment__c/fields/Mentoring_Fee__c.field-meta.xml
<CustomField>
    <fullName>Mentoring_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Mentoring Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>