force-app/main/default/objects/Course_Enrollment__c/fields/Payment_Order__c.field-meta.xml
<CustomField>
    <fullName>Payment_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Order</label>
    <referenceTo>Payment_Order__c</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>Course_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>