force-app/main/default/objects/Course_Enrollment__c/fields/Remaining_Slots__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Slots__c</fullName>
    <formula>Students_to_Be_Alloted__c  -  Students_Enrolled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Slots</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>