force-app/main/default/objects/Course_Enrollment__c/fields/Schedule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Start_Date__c</fullName>
    <description>Thee date from which the mentor will take classes</description>
    <label>Schedule Start Date</label>
    <type>Date</type>
</CustomField>