force-app/main/default/objects/Course_Enrollment__c/fields/Session_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Session_Percentage__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Mentor&apos;, IF(Total_Sessions_Completed__c &gt; 0 &amp;&amp; Total_Sessions__c &gt; 0, Total_Sessions_Completed__c/Total_Sessions__c, 0),  IF(Total_Sessions_Completed_By_Student__c &gt; 0 &amp;&amp; Total_Session_of_Students__c&gt; 0, Total_Sessions_Completed_By_Student__c/Total_Session_of_Students__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>