force-app/main/default/objects/Course_Enrollment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested by Mentor</fullName>
            </value>
            <value>
                <fullName>Requested by Student</fullName>
            </value>
            <value>
                <fullName>Allocated for Mentoring</fullName>
            </value>
            <value>
                <fullName>Student Allocated</fullName>
            </value>
            <value>
                <fullName>Course in Progress</fullName>
            </value>
            <value>
                <fullName>Course Completed</fullName>
            </value>
            <value>
                <fullName>Sessions Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>