force-app/main/default/objects/Course_Enrollment__c/fields/Student_Count_Updated__c.field-meta.xml
<CustomField>
    <fullName>Student_Count_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student Count Updated</label>
    <type>Checkbox</type>
</CustomField>