force-app/main/default/objects/Course_Enrollment__c/fields/Students_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Students_Enrolled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Students Enrolled</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>