force-app/main/default/objects/Course_Enrollment__c/fields/Students_to_Be_Alloted__c.field-meta.xml
<CustomField>
    <fullName>Students_to_Be_Alloted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Students to Be Alloted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>