force-app/main/default/objects/Course_Enrollment__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <label>Total Hours</label>
    <length>8</length>
    <type>Text</type>
</CustomField>