force-app/main/default/objects/Course_Enrollment__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Points</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>