force-app/main/default/objects/Course_Enrollment__c/fields/Total_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating__c</fullName>
    <label>Total Rating</label>
    <summarizedField>Student_Feedback__c.Student_Rating__c</summarizedField>
    <summaryForeignKey>Student_Feedback__c.Student_Course_Enrollment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>