force-app/main/default/objects/Course_Enrollment__c/fields/Total_Session_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Total_Session_of_Students__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Session of Students</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>