force-app/main/default/objects/Course_Enrollment__c/fields/Total_Sessions_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Sessions_Completed__c</fullName>
    <label>Total Sessions Completed</label>
    <summarizedField>CE_Modules__c.Total_Sessions_Completed__c</summarizedField>
    <summaryForeignKey>CE_Modules__c.Course_Enrollment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>