force-app/main/default/objects/Course_Enrollment__c/fields/Total_Sessions_Completed_By_Student__c.field-meta.xml
<CustomField>
    <fullName>Total_Sessions_Completed_By_Student__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Sessions Completed By Student</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>