force-app/main/default/objects/Course_Enrollment__c/recordTypes/Mentor.recordType-meta.xml
<RecordType>
    <fullName>Mentor</fullName>
    <active>true</active>
    <label>Mentor</label>
</RecordType>