force-app/main/default/objects/Course_Enrollment__c/validationRules/mentor_student_ratio.validationRule-meta.xml
<ValidationRule>
    <fullName>mentor_student_ratio</fullName>
    <active>true</active>
    <description>if enrolled candidate is a mentor than he should fill no of students which he wants to teach before saving</description>
    <errorConditionFormula>Applied_by__c  = &apos;Mentor&apos;  &amp;&amp;  Students_to_Be_Alloted__c  = Null</errorConditionFormula>
    <errorMessage>Please enter Number of students to be Mentored</errorMessage>
</ValidationRule>