force-app/main/default/objects/Course_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applied_by__c</columns>
    <columns>Contact__c</columns>
    <columns>Course_Master__c</columns>
    <columns>Mentor__c</columns>
    <columns>Mentor_Course_Enrollment__c</columns>
    <columns>Status__c</columns>
    <columns>contact_Under_CE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>